--- a/Shop_web.html
+++ b/Shop_web.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <body>
-<div id="webp"><h1>web design</h1></div>
 </body>
 <head>
 <script type="text/javascript">
@@ -8,7 +7,7 @@
 </script>
 
 <style> 
-#webp {
+.webp {
    postition:relative;
    width:100%;
    top:20%;
@@ -111,6 +110,7 @@ body {
 </head>
 
 <body>
+<div class="webp"><h1>web design</h1></div>
 <div class="menu-wrap">
     <nav class="menu">
         <ul class="clearfix">
