--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <style> 
 .webp {
-   postition:relative;
-   width:100%;
-   top:20%;
-   text-align:center;
+   postition: relative;
+   width: 100%;
+   margin-top: 20%;
+   text-align: center;
  }
 </style>
 <style>
