--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
    <title>Home - Kryptonic</title>
+   <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
