--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </li>
             <li><a href="#">WebDesign</a></li>
             <li><a href="#">WebTemplates</a></li>
+            <li><a href="#">STORE</a></li>
         </ul>
     </nav>
 </div>
