--- a/index.html
+++ b/index.html
@@ -6,25 +6,11 @@
 
 <body>
 <div class="webp"><h1>web design</h1></div>
-<div class="menu-wrap">
-    <nav class="menu">
-        <ul class="clearfix">
-            <li><a href="#">Home</a></li>
-            <li>
-                <a href="#">GFX <span class="arrow">&#9660;</span></a>
- 
-                <ul class="sub-menu">
-                    <li><a href="#">banners</a></li>
-                    <li><a href="#">logos</a></li>
-                    <li><a href="#">cards</a></li>
-                    <li><a href="#">Showtimes &amp; Tickets</a></li>
-                </ul>
-            </li>
-            <li><a href="#">WebDesign</a></li>
-            <li><a href="#">WebTemplates</a></li>
-            <li><a href="#">STORE</a></li>
-        </ul>
-    </nav>
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+</ul>
 </div>
    <div class="header-background">
       <image></image>
